# agentry

./: .agentry.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/agentry/superpowers@main/: hooks
.claude/skills/: brainstorming  dispatching-parallel-agents  executing-plans  finishing-a-development-branch  receiving-code-review  requesting-code-review  subagent-driven-development  systematic-debugging  test-driven-development  using-git-worktrees  using-superpowers  verification-before-completion  writing-plans  writing-skills
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release-binaries.yml  release-drafter.yml  release.yml
docs/: architecture.md  branding-kit.md  commands.md  index.md  knowledge-base.md
docs/superpowers/plans/: 2026-06-29-standalone-binaries-release.md
docs/superpowers/specs/: 2026-06-29-standalone-binaries-release-design.md  2026-06-30-competitive-advantage-over-apm-design.md  2026-06-30-transform-seam-design.md
packaging/: README.md  agy.spec  entry.py  nfpm.yaml
packaging/devcontainer/src/agentry/: devcontainer-feature.json  install.sh
packaging/homebrew/: agy.rb
packaging/macos/: distribution.xml
packaging/macos/scripts/: postinstall
packaging/scoop/: agy.json
packaging/windows/: agy.iss
registry/: repositories.json  skills.json
scripts/: bump.py  render_homebrew.py
skills/use-agentry/: SKILL.md
src/agentry/: __init__.py  apm_import.py  cli.py  config.py  deps.py  discovery.py  doctor.py  emit.py  envscan.py  gitignore.py  lockfile.py  manifest.py  models.py  reconcile.py  registry.py  resolver.py  spec.py  targets.py
src/agentry/drivers/: __init__.py  agents.py  base.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  kimi.py  kiro.py  opencode.py  windsurf.py
src/agentry/installers/: __init__.py  _paths.py  copy.py  generate.py  link.py  link_merge.py  merge.py  transform.py
tests/: conftest.py  test_apm_import.py  test_bump.py  test_cli.py  test_config.py  test_deps.py  test_discovery.py  test_doctor.py  test_drivers.py  test_emit.py  test_frozen.py  test_git_source.py  test_gitignore.py  test_guarantees.py  test_hashing.py  test_mappings.py  test_mcp_guarantees.py  test_packaging.py  test_reconcile.py  test_registry.py  test_render_homebrew.py  test_repository.py  test_toml_merge.py  test_transform_strategy.py  test_trust.py
