[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentry"
version = "0.1.0"
description = "A dependency manager for AI coding agents — install skills, agents, commands, tools, hooks and MCP servers per project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "agentry contributors" }]
keywords = ["ai", "agents", "claude-code", "opencode", "cursor", "mcp", "skills", "dependency-manager", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.26.7",
    "rich>=13.7",
    "pydantic>=2.6",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
tui = ["textual>=0.60"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "pre-commit>=3.7"]
lint = ["ruff>=0.6"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.urls]
Homepage = "https://github.com/opentech/agentry"
Documentation = "https://github.com/opentech/agentry/tree/main/docs"
Repository = "https://github.com/opentech/agentry"
Issues = "https://github.com/opentech/agentry/issues"

[project.scripts]
agy = "agentry.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pyflakes + pycodestyle, I: import sorting, UP: pyupgrade,
# B: flake8-bugbear, SIM: flake8-simplify. Low-noise, high-signal defaults.
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length is enforced by `ruff format`, not the linter
    "B008",  # function call in default arg — required by Typer (typer.Option/Argument)
    "B904",  # raise-without-from — Typer raises typer.Exit in except for clean CLI errors
]

[tool.ruff.lint.isort]
known-first-party = ["agentry"]
